Bug 1748181 - Provide a pref to make scrollbar-width: thin behave as auto. r=morgan

Differential Revision: https://phabricator.services.mozilla.com/D137898